syntax = "proto3";

package v1;

import "google/protobuf/timestamp.proto";

//用于管理待办事项列表的服务
service ToDoService {
  //创建
  rpc Create (CreateRequest) returns (CreateResponse) {}

  //读取
  rpc Read(ReadRequest) returns (ReadResponse) {}
}
message CreateRequest {
  string api = 1;
  ToDo toDo = 2;
}

message ToDo {
  uint64 id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp reminder = 4;
}

message CreateResponse {
  string api = 1;
  //已创建任务的ID
  uint64 id = 2;
}

message ReadRequest {
  string api = 1;
  uint64  id = 2;
}

message ReadResponse {
  string api = 1;
  ToDo todo = 2;
}

message UpdateRequest{
  string api = 1;
  ToDo toDo = 2;
}

message UpdateResponse {
  string api =1;
  //更新的数量
  uint64 updated = 2;
}

message DeleteRequest {
  string api = 1;
  uint64 id = 2;
}

message DeleteResponse {
  string api = 1;
  //删除的数量
  uint64 deleted = 2;
}

// 请求数据以读取所有待办事项任务
message ReadAllRequest {
  // API版本控制：这是明确指定版本的最佳实践
  string api = 1;
}
// 包含所有待办事项任务的列表
message ReadAllResponse {
  // API版本控制：这是明确指定版本的最佳实践
  string api = 1;
  repeated ToDo toDos = 2;
}